--- a/prisma/package.json
+++ b/prisma/package.json
@@ -1,18 +1,7 @@
 {
   "name": "@uzeed/prisma",
   "private": true,
-  "version": "0.1.0",
-  "scripts": {
-    "generate": "node scripts/validate-schema.js && prisma generate",
-    "migrate:dev": "prisma migrate dev",
-    "migrate:deploy": "prisma migrate deploy",
+  "prisma": {
     "seed": "node seed.js"
-  },
-  "dependencies": {
-    "@prisma/client": "5.22.0",
-    "argon2": "^0.31.2"
-  },
-  "devDependencies": {
-    "prisma": "5.22.0"
   }
 }
