--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "pnpm --filter @uzeed/shared build && tsup src/index.ts src/worker.ts --format cjs --clean --sourcemap",
+    "build": "pnpm -w check:markers && pnpm --filter @uzeed/shared build && tsup src/index.ts src/worker.ts --format cjs --clean --sourcemap",
     "start": "node dist/index.js",
     "start:worker": "node dist/worker.js",
     "lint": "eslint .",
