--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,14 @@
   "dependencies": {
     "@uzeed/shared": "workspace:*",
     "framer-motion": "^11.2.12",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
+    "mapbox-gl": "^3.9.0",
     "next": "14.2.15",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
-    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
