fix(web): evitar binarios nuevos en assets PWA

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,13 @@ SMTP_USER=
 SMTP_PASS=
 SMTP_FROM=no-reply@uzeed.cl
 
+# ---------- Web Push / PWA ----------
+# Generate with: npx web-push generate-vapid-keys
+VAPID_SUBJECT=mailto:soporte@uzeed.cl
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=
+
 # ---------- Web (Next.js) ----------
 NEXT_PUBLIC_API_URL=https://api.uzeed.cl
 
