--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,7 +30,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -43,6 +44,7 @@
     "prisma": "^5.22.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@types/web-push": "^3.6.4"
   }
 }
