--- a/prisma/package.json
+++ b/prisma/package.json
@@ -2,18 +2,21 @@
   "name": "@uzeed/prisma",
   "private": true,
   "prisma": {
-    "seed": "node seed.js"
+    "seed": "tsx seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "argon2": "^0.31.2"
   },
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "tsx": "^4.20.5"
   },
   "scripts": {
     "generate": "prisma generate --schema=schema.prisma",
     "migrate:deploy": "prisma migrate deploy --schema=schema.prisma",
-    "db:seed": "prisma db seed --schema=schema.prisma"
+    "db:seed": "prisma db seed --schema=schema.prisma",
+    "seed:up": "tsx seed.ts up",
+    "seed:down": "tsx seed.ts down"
   }
 }
