--- a/prisma/package.json
+++ b/prisma/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "generate": "prisma generate --schema=schema.prisma",
     "migrate:deploy": "prisma migrate deploy --schema=schema.prisma",
-    "db:seed": "prisma db seed --schema=schema.prisma"
+    "db:seed": "prisma db seed --schema=schema.prisma",
+    "seed:up": "node seed.js up",
+    "seed:down": "node seed.js down"
   }
 }
